--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bujji</title>
+    <link rel="shortcut icon" href="bujji.jpg">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Bujji</h1>
-        </div>
-        <input type="text" placeholder="Enter your text">
-    </div>
+    <img src="bujji.png" alt="Bujji" id="logo">
+    <h1>I'm <span id="name"> Bujji </span>, your <span id="dis">Virtual Assistant</span></h1>
+    <img src="load.gif" alt="" id="voice">
+    <button id="btn"><img src="mute.svg" id="mic">Click here to talk to me</button>
    <script src="script.js"></script>
 
 </body>
