--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bujji</title>
-    <link rel="shortcut icon" href="bujji.jpg">
+    <link rel="shortcut icon" href="bujji.png">
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
     <img src="bujji.png" alt="Bujji" id="logo">
     <h1>I'm <span id="name"> Bujji </span>, your <span id="dis">Virtual Assistant</span></h1>
     <img src="load.gif" alt="" id="voice">
-    <button id="btn"><img src="mute.svg" id="mic">Click here to talk to me</button>
+    <button id="btn"><img src="mute.svg" id="mic"><span id="text">Click here to talk to me</span></button>
    <script src="script.js"></script>
 
 </body>
