--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="bujji.png" alt="Bujji" id="logo">
+    <img src="Bujji.png" alt="Bujji" id="logo">
     <h1>I'm <span id="name"> Bujji </span>, your <span id="dis">Virtual Assistant</span></h1>
     <img src="load.gif" alt="" id="voice">
     <button id="btn"><img src="mic.svg" id="mic"><span id="text">Click here to talk to me</span></button>
